# AI-emotion-detection

./: .gitignore  allfileshashe.txt  docker-compose.yml
backend/: Dockerfile  index.js  package.json
ml/: Dockerfile  fastapi_service.py  main.py  pyproject.toml  yay.py
ui/: Dockerfile  README.md  package.json
ui/public/: index.html  manifest.json
ui/src/: App.css  App.js  index.css
ui/src/components/: EmotionResults.js
