[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "deepface>=0.0.93",
    "fastapi",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "python-multipart>=0.0.6",
    "tf-keras>=2.19.0",
    "uvicorn",
]
